--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -24,7 +24,7 @@
     class="min-h-screen w-screen bg-black text-white font-mono overflow-hidden"
   >
     <div class="flex h-screen">
-      <!-- Sidebar -->
+      <!-- Left Sidebar -->
       <div class="w-64 border-r border-white p-4">
         <div class="h-full flex flex-col">
           <button class="w-full border border-white p-2 hover:bg-white hover:text-black transition-colors mb-4">
@@ -55,6 +55,13 @@
               Send
             </button>
           </div>
+        </div>
+      </div>
+
+      <!-- Right Sidebar -->
+      <div class="w-64 border-l border-white p-4">
+        <div class="h-full">
+          <!-- Right sidebar content will go here -->
         </div>
       </div>
     </div>
