--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -23,7 +23,14 @@
   <body
     class="min-h-screen w-screen bg-black text-white font-mono overflow-hidden"
   >
-    <div class="flex h-screen">
+    <!-- Header navbar -->
+    <div class="w-full border-b border-white">
+      <div class="flex h-[57px] items-center px-4">
+        <!-- Header content will go here -->
+      </div>
+    </div>
+
+    <div class="flex h-[calc(100vh-57px)]">
       <!-- Left Sidebar -->
       <div class="w-64 border-r border-white p-4">
         <div class="h-full flex flex-col">
