--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -25,8 +25,16 @@
   >
     <!-- Header navbar -->
     <div class="w-full border-b border-white">
-      <div class="flex h-[57px] items-center px-4">
-        <!-- Header content will go here -->
+      <div class="flex h-[57px]">
+        <div class="w-64 flex items-center justify-center">
+          <a href="/" class="hover:text-gray-300 transition-colors">OpenAgents</a>
+        </div>
+        <div class="flex-1">
+          <!-- Center header content will go here -->
+        </div>
+        <div class="w-64">
+          <!-- Right header content will go here -->
+        </div>
       </div>
     </div>
 
