--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -65,6 +65,7 @@
               type="text"
               class="flex-grow bg-black p-4 focus:outline-none"
               placeholder="Type your message..."
+              autofocus="true"
             />
             <button class="px-4 border-l border-white hover:bg-white hover:text-black transition-colors">
               Send
